Tried to fix header background-image alignment with body on some mobile devices

--- a/style.css
+++ b/style.css
@@ -530,8 +530,7 @@ body.home .share, body.contact .share {
 body, header {
     background-image: linear-gradient(45deg,transparent,#F5F5F5),linear-gradient(120deg, #fccb90 0%, #d57eeb 100%) !important;
     background-attachment: fixed !important;
-    background-size: cover !important;
-    background-position: center center !important;
+    background-size: 100vw !important;
     background-repeat: no-repeat !important;
 }
 
